# src/docs/openapi.yaml
@@ -1783,35 +1783,6 @@ paths:
         500:
           $ref: "#/components/responses/InternalServerError"
 
-    post:
-      tags:
-        - Images
-      summary: Subir una imagen
-      security:
-        - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                image:
-                  $ref: "#/components/bases/image"
-                productId:
-                  $ref: "#/components/bases/id"
-      responses:
-        201:
-          $ref: "#/components/responses/image"
-        400:
-          $ref: "#/components/responses/BadRequest"
-        401:
-          $ref: "#/components/responses/Unauthorized"
-        403:
-          $ref: "#/components/responses/Forbidden"
-        500:
-          $ref: "#/components/responses/InternalServerError"
-
   /images/{id}:
     get:
       tags:
@@ -1882,6 +1853,46 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/image"
+        404:
+          $ref: "#/components/responses/NotFound"
+        500:
+          $ref: "#/components/responses/InternalServerError"
+
+    post:
+      tags:
+        - Images
+      summary: Agregar una imagen a un producto
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          description: ID del producto
+          schema:
+            $ref: "#/components/bases/id"
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  $ref: "#/components/bases/image"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/responses/image"
+        400:
+          $ref: "#/components/responses/BadRequest"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        403:
+          $ref: "#/components/responses/Forbidden"
         404:
           $ref: "#/components/responses/NotFound"
         500:
